--- a/layouts/about/list.html
+++ b/layouts/about/list.html
@@ -12,10 +12,13 @@
   <!-- background shapes -->
   <img src="{{`images/illustrations/page-title.png`| relURL}}" alt="illustrations" class="bg-shape-1 w-100">
   <img src="{{`images/illustrations/dots-group-sm.svg`| relURL}}" alt="illustrations" class="bg-shape-2">
-  <img src="{{`images/illustrations/leaf-yellow.svg`| relURL}}" alt="illustrations" class="bg-shape-3" style="margin-top: 3%;">
-  <img src="{{`images/illustrations/leaf-orange.svg`| relURL}}" alt="illustrations" class="bg-shape-4">
   <img src="{{`images/illustrations/dots-group-cyan.svg`| relURL}}" alt="illustrations" class="bg-shape-5">
-  <img src="{{`images/illustrations/leaf-cyan-lg.svg`| relURL}}" alt="illustrations" class="bg-shape-6">
+  <div class="illustration-handler">
+    <img src="{{`images/illustrations/leaf-cyan-lg.svg`| relURL}}" alt="illustrations" class="bg-shape-6">
+    <img src="{{`images/illustrations/leaf-yellow.svg`| relURL}}" alt="illustrations" class="bg-shape-3"
+      style="margin-top: 3%;">
+    <img src="{{`images/illustrations/leaf-orange.svg`| relURL}}" alt="illustrations" class="bg-shape-4">
+  </div>
 </section>
 <!-- /page title -->
 
@@ -31,8 +34,8 @@
           <img src="{{.Params.author_image | absURL }}" alt="author" class="img-fluid w-100 rounded-lg border-thick border-white">
         </div>
         <img src="{{.Params.author_signature | absURL }}" alt="signature" class="img-fluid" width = "270">
-        <h4>{{ site.Params.Author }}</h4>
-        <div style="margin: 25px; width: 320px;">
+        <h4 style="padding: 8% 0;">{{ site.Params.Author }}</h4>
+        <div style="margin: 25px; width: 320px; margin:auto">
           <a class="cv-button" style = "border-radius: 5px;"  href="{{site.Params.cv_url}}" target="_blank">
             Download my CV
           </a>
