--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -13,7 +13,7 @@
       </div>-->
       {{ with site.Params.map }}
       {{"<!-- Google Map -->" | safeHTML}}
-      <div class="gmap_canvas shadow">
+      <div class="gmap_canvas shadow map-responsive">
         <iframe width="914" height="535" id="gmap_canvas" src="{{ .gmap_api | absURL}}" frameborder="0" style="border:2rem"
           scrolling="no" marginheight="0" marginwidth="0" allowfullscreen>
         </iframe>
