--- a/layouts/gallery/list.html
+++ b/layouts/gallery/list.html
@@ -44,7 +44,7 @@
   <!-- The Modal -->
   <div id="myModal" class="modal">
     <span class="close">&times;</span>
-    <img class="modal-content" id="img01">
+    <img id="img01">
   </div>
 </section>
 
