--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -578,7 +578,7 @@ textarea.form-control {
 /* 100% Image Width on Smaller Screens */
 @media only screen and (max-width: 700px) {
   .modal {
-  padding: 21% 10% 1.5% 10%;
+  padding: 21% 0% 1.5% 0%;
   }
   .modal img {
     width: auto;
@@ -610,7 +610,11 @@ textarea.form-control {
   width: 70%;
   margin-left: 5%;
 }
-
+@media (min-width: 801px) and (max-width: 1200px) {
+  .right {
+    margin-left: 11%;
+  }
+}
 @media screen and (max-width: 800px) {
   .left {
     width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
