photos optimized & contact form updated

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1213,3 +1213,7 @@ blockquote {
     width:100%;
     position:absolute;
 }
+/********************************* Honey Pot*****************************************/
+.hpot {
+  display: none;
+}
